# cab

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release.config.mjs  rename-template.sh
.github/workflows/: check.yml  deploy.yml  init.yml
src/cab/: __init__.py  main.py
src/cab/system1/: llm.py
src/uv_python_project_template/: __init__.py  main.py
test/: test_my_class.py
