[project]
name = "uv-python-project-template"
version = "1.1.4"
description = "A Python project template using uv"
readme = "README.md"
authors = [
    { name = "Mattia Matteini", email = "matteinimattia@gmail.com" }
]
requires-python = ">=3.10" # Update workflows/check.yml if you change this
dependencies = [
    "poethepoet>=0.45.0",
]

[project.scripts]
uv_python_project_template = "uv_python_project_template.main:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.poe.tasks]
test = "pytest"
coverage = "coverage run -m pytest"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
ruff-check = "ruff check"
ruff-fix = "ruff check --fix"
format = "ruff format"
format-check = "ruff format --check"
mypy = "mypy src test"
compile = "python -m compileall src test"
static-checks = [
    "compile",
    "format-check",
    "ruff-check",
    "mypy",
]
static-fixes = [
    "ruff-fix",
    "format",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
